frei0r-sys/bindings.rs

unsafe extern "C" {
    #[doc = " This function allows the application to query the parameter values of an\n effect instance.\n\n If the parameter type is of F0R_PARAM_STRING, then the caller should\n supply a pointer to f0r_param_string (char**). The plugin sets the\n pointer to the address of its copy of the parameter value. Therefore,\n the caller should not free the result. If the caller needs to modify\n the value, it should make a copy of it and modify before calling\n f0r_set_param_value().\n\n \\param instance the effect instance\n \\param param pointer to the parameter value\n \\param param_index index of the parameter\n\n \\see f0r_set_param_value"]
    pub fn f0r_get_param_value(
        instance: f0r_instance_t,
        param: f0r_param_t,
        param_index: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    #[doc = " This is where the core effect processing happens. The application calls it\n after it has set the necessary parameter values.\n inframe and outframe must be aligned to an integer multiple of 16 bytes\n in memory.\n\n This function should not alter the parameters of the effect in any\n way (\\ref f0r_get_param_value should return the same values after a call\n to \\ref f0r_update as before the call).\n\n The function is responsible to restore the fpu state (e.g. rounding mode)\n and mmx state if applicable before it returns to the caller.\n\n The host mustn't call \\ref f0r_update for effects of type\n \\ref F0R_PLUGIN_TYPE_MIXER2 and \\ref F0R_PLUGIN_TYPE_MIXER3.\n\n \\param instance the effect instance\n \\param time the application time in seconds but with subsecond resolution\n        (e.g. milli-second resolution). The resolution should be at least\n        the inter-frame period of the application.\n \\param inframe the incoming video frame (can be zero for sources)\n \\param outframe the resulting video frame\n\n \\see f0r_update2"]
    pub fn f0r_update(instance: f0r_instance_t, time: f64, inframe: *const u32, outframe: *mut u32);
}
unsafe extern "C" {
    #[doc = " For effects of type \\ref F0R_PLUGIN_TYPE_SOURCE or\n \\ref F0R_PLUGIN_TYPE_FILTER this method is optional. The \\ref f0r_update\n method must still be exported for these two effect types. If both are\n provided the behavior of them must be the same.\n\n Effects of type \\ref F0R_PLUGIN_TYPE_MIXER2 or \\ref F0R_PLUGIN_TYPE_MIXER3 must provide the new \\ref f0r_update2 method.\n\n \\param instance the effect instance\n \\param time the application time in seconds but with subsecond resolution\n        (e.g. milli-second resolution). The resolution should be at least\n        the inter-frame period of the application.\n \\param inframe1 the first incoming video frame (can be zero for sources)\n \\param inframe2 the second incoming video frame\n(can be zero for sources and filters)\n \\param inframe3 the third incoming video frame\n(can be zero for sources, filters and mixer2)\n \\param outframe the resulting video frame\n\n \\see f0r_update"]
    pub fn f0r_update2(
        instance: f0r_instance_t,
        time: f64,
        inframe1: *const u32,
        inframe2: *const u32,
        inframe3: *const u32,
        outframe: *mut u32,
    );
}
